@@ -1,5 +1,10 @@
 2009-12-15  Tristan Gingold  <gingold@adacore.com>
 
+	* machoread.c (macho_symfile_read): Set section size of dsym bfd
+	from main bfd.
+
+2009-12-15  Tristan Gingold  <gingold@adacore.com>
+
         * machoread.c (macho_check_dsym): Read uuid directly from load command
         instead of from a fake section.
 
